--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^7.6.0",
     "@shopify/hydrogen": "2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
+    "hydrogen-sanity": "^4.3.3",
     "isbot": "^5.1.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
