--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/client"
-      }
+      "src": "dist/client/**",
+      "use": "@vercel/static"
     },
     {
       "src": "dist/server/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": { "maxLambdaSize": "50mb" }
     }
   ],
   "routes": [
