--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "sideEffects": false,
   "version": "2025.5.1",
-  "type": "module",
   "scripts": {
     "build": "shopify hydrogen build --codegen",
     "dev": "shopify hydrogen dev --codegen",
@@ -15,6 +14,7 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@portabletext/react": "^3.2.1",
+    "@remix-run/vercel": "^1.19.3",
     "@sanity/client": "^7.6.0",
     "@shopify/hydrogen": "2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
+    "semver": "^7.7.2",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
@@ -58,9 +59,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.2.2",
-    "vite": "^6.2.4",
-    "vite-tsconfig-paths": "^4.3.1"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
