--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "prettier": "@shopify/prettier-config",
   "dependencies": {
     "@portabletext/react": "^3.2.1",
+    "@remix-run/dev": "^2.16.8",
     "@remix-run/vercel": "^1.19.3",
     "@sanity/client": "^7.6.0",
     "@shopify/hydrogen": "2025.5.0",
