--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "sideEffects": false,
   "version": "2025.5.1",
+  "type": "module",
   "scripts": {
     "build": "shopify hydrogen build --codegen",
     "dev": "shopify hydrogen dev --codegen",
