--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-router": "7.6.0",
     "react-router-dom": "7.6.0",
     "semver": "^7.7.2",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "vite": "^7.0.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
