--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "@portabletext/react": "^3.2.1",
     "@remix-run/dev": "^2.16.8",
-    "@remix-run/vercel": "^1.19.3",
+    "@remix-run/vercel": "^2.16.8",
     "@sanity/client": "^7.6.0",
     "@shopify/hydrogen": "2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "hydrogen-sanity": "^4.3.3",
-    "isbot": "^5.1.22",
+    "isbot": "^5.1.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "7.6.0",
@@ -63,7 +63,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^6.2.0",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
