--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,22 @@
 {
-  "include": [
-    "./**/*.d.ts",
-    "./**/*.ts",
-    "./**/*.tsx",
-    ".react-router/types/**/*"
-  ],
+  "include": ["./**/*.d.ts", "./**/*.ts", "./**/*.tsx", "tailwind.config.js"],
   "compilerOptions": {
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES2022"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "module": "ES2022",
     "target": "ES2022",
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "baseUrl": ".",
-    "types": [
-      "@shopify/oxygen-workers-types",
-      "react-router",
-      "vite/client"
-    ],
+    "types": ["@shopify/oxygen-workers-types"],
     "paths": {
-      "~/*": [
-        "app/*"
-      ]
+      "~/*": ["app/*"]
     },
-    "noEmit": true,
-    "rootDirs": [".", "./.react-router/types"]
+    "noEmit": true
   }
 }
