--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.2.1",
-    "@remix-run/dev": "^2.16.8",
+    "@react-router/dev": "^7.0.0",
     "@sanity/client": "^7.6.0",
     "@shopify/hydrogen": "2025.5.0",
     "@shopify/remix-oxygen": "^3.0.0",
@@ -29,7 +29,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "7.6.0",
-    "react-router-dom": "7.6.0",
     "semver": "^7.7.2",
     "tailwindcss": "^4.1.6"
   },
